# AmbrTop-Wrapper

./: .gitignore  README.md  pyproject.toml  setup.py  testing.py
ambrtop_py/: __init__.py  api.py  api_requests.py  cache.sqlite
ambrtop_py/classes/: _functions.py  avatar.py  food.py  material.py  misc.py  monster.py  namecard.py  static_data.py  weapon.py
