[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ambrtop"
version = "0.0.3"
authors = [
  { name="Furiã"},
]
description = "An asynchronous https://ambr.top/ API wrapper for Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/FuriaPaladins/AmbrTop-Wrapper"
